Project chatbot_platform {
  database_type: 'PostgreSQL'
  Note: 'Multi-tenant AI chatbot platform'
}

Table users {
  id         uuid      [pk, default: `gen_random_uuid()`]
  name       text      [not null]
  email      text      [not null, unique]
  password_hash text   [not null]
  created_at timestamp [not null, default: `now()`]
}

Table refresh_tokens {
  id         uuid      [pk, default: `gen_random_uuid()`]
  user_id    uuid      [not null, ref: > users.id]
  token      text      [not null, unique]
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]

  Note: 'Rotated on every use. Deleted on logout.'
}

Table projects {
  id             uuid      [pk, default: `gen_random_uuid()`]
  user_id        uuid      [not null, ref: > users.id]
  name           text      [not null]
  system_prompt  text      [not null]
  scope_enforced boolean   [not null, default: false]
  created_at     timestamp [not null, default: `now()`]
  updated_at     timestamp [not null, default: `now()`]

  Note: 'An agent configuration owned by a user. scope_enforced makes the agent decline off-topic questions.'
}

Table conversations {
  id         uuid      [pk, default: `gen_random_uuid()`]
  project_id uuid      [not null, ref: > projects.id]
  user_id    uuid      [not null, ref: > users.id]
  title      text      [not null, default: 'New conversation']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table messages {
  id              uuid      [pk, default: `gen_random_uuid()`]
  conversation_id uuid      [not null, ref: > conversations.id]
  role            text      [not null, note: 'user | assistant']
  content         text      [not null]
  created_at      timestamp [not null, default: `now()`]
}
